2002-02-20  Don Porter <dgp@users.sourceforge.net>

	* generic/tcl.decls (Tcl_RegExpRange,Tcl_GetIndexFromObjStruct):
	Overlooked a few source incompatibilities.  Now using CONST84.
	* generic/tclDecls.h: make genstubs
	* generic/tcl.h (Tcl_CmdObjTraceProc): silence warning from Sun
	Workshop compiler.

2002-02-20  David Gravereaux <davygrvy@pobox.com>

	* win/buildall.vc.bat:
	* win/makefile.vc:
	* win/rules.vc: General clean-ups.  Added compiler and linker tests
	for a) the pentium 0x0F errata, b) optimizing (not all have this),
	and c) linker v6 section alignment confusion.  All these are tested
	first to make sure any D4002 or LNK1117 warnings aren't displayed.
	The pentium 0x0F errata is a recommended switch.  The v5 linker's
	section alignment default is 512, but the v6 linker was changed
	to 4096 in an attempt to speed loading on Win98.  I changed the
	default to always be 512 across both linkers, unless linking
	statically, then 4096 is used for the claimed speed effect. Using
	a 512 alignment saves 12k bytes of dead space in the DLL.

	Added IA64 B-stepping errata switch when the compiler supports it.

	Added profiling to $(lflags) when requested and also removed the
	explict -entry option as the default works fine as is.

	Removed win/tclWinInit.c from the special case section to let it
	use the common implicit rule as the $(EXTFLAGS) macro it had was
	never referenced anywhere.

2002-02-20  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tcl.h: Added code to guess the correct settings for
	TCL_WIDE_INT_IS_LONG and TCL_WIDE_INT_TYPE when configure doesn't
	tell us them, as can happen with extensions.

2002-02-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/format.n: Updated docs to list the specification.
	* generic/tclCmdAH.c (Tcl_FormatObjCmd): Made behaviour on 64-bit
	platforms correctly meet the specification, that %d works with the
	native word-sized integer, instead of trying to guess (wrongly)
	from the value being passed.
