@@ -13,7 +13,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tcl.h,v 1.117 2002/02/20 18:46:29 dgp Exp $
+ * RCS: @(#) $Id: tcl.h,v 1.118 2002/02/21 16:49:38 dkf Exp $
  */
 
 #ifndef _TCL
@@ -383,11 +383,16 @@ typedef struct _stati64	Tcl_StatBuf;
  * Don't know what platform it is and configure hasn't discovered what
  * is going on for us.  Try to guess...
  */
-#      if (0x80000000L < 0)
-#	  define TCL_WIDE_INT_IS_LONG	1
-#      else
-#	  define TCL_WIDE_INT_TYPE long long
-#      endif
+#      ifdef NO_LIMITS_H
+#	  error please define either TCL_WIDE_INT_TYPE or TCL_WIDE_INT_IS_LONG
+#      else /* !NO_LIMITS_H */
+#	  include <limit.h>
+#	  if (INT_MAX < LONG_MAX)
+#	     define TCL_WIDE_INT_IS_LONG	1
+#	  else
+#	     define TCL_WIDE_INT_TYPE long long
+#         endif
+#      endif /* NO_LIMITS_H */
 #   endif /* __WIN32__ */
 #endif /* !TCL_WIDE_INT_TYPE & !TCL_WIDE_INT_IS_LONG */
 #ifdef TCL_WIDE_INT_IS_LONG
